<resources>
    <string name="app_name">Aided Learning Vb.net</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="what_is_java">What is VB.net?   </string>
    <string name="basic_datatypes">Data Types</string>
    <string name="datatype1">
        Data types refer to an extensive system used for declaring variables or functions of different types. The type of a variable determines how much space it occupies in storage and how the bit pattern stored is interpreted.\n\n

        Data Types Available in VB.Net\n\n
        VB.Net provides a wide range of data types. The following table shows all the data types available −\n\n
    </string>
    <string name="datatype2"><b>Example</b>\n\n The following example demonstrates use of some of the types −\n</string>
    <string name="datatype3">
        Module DataTypes\n
   Sub Main()\n
      Dim b As Byte\n
      Dim n As Integer\n
      Dim si As Single\n
      Dim d As Double\n
      Dim da As Date\n
      Dim c As Char\n
      Dim s As String\n
      Dim bl As Boolean\n\n

      b = 1\n
      n = 1234567\n
      si = 0.12345678901234566\n
      d = 0.12345678901234566\n
      da = Today\n
      c = "U"c\n
      s = "Me"\n\n

      If ScriptEngine = "VB" Then\n
         bl = True\n
      Else\n
         bl = False\n
      End If\n\n

      If bl Then\n
         \'the oath taking\n
         Console.Write(c &amp; " and," &amp; s &amp; vbCrLf)\n
         Console.WriteLine("declaring on the day of: {0}", da)\n
         Console.WriteLine("We will learn VB.Net seriously")\n
         Console.WriteLine("Lets see what happens to the floating point variables:")\n
         Console.WriteLine("The Single: {0}, The Double: {1}", si, d)\n
      End If\n
      Console.ReadKey()\n
       End Sub\n
    End Module\n\n

        When the above code is compiled and executed, it produces the following result −\n\n
    </string>
    <string name="datatype4">
       <b> The Type Conversion Functions in VB.Net</b>\n\n
        VB.Net provides the following in-line type conversion functions −\n\n
    </string>
    <string name="datatype5">
        <b>Example</b>\n\n
        The following example demonstrates some of these functions −\n\n
    </string>
    <string name="variable_types">VB.NET Variables </string>
    <string name="variable1">
        A variable is nothing but a name given to a storage area that our programs can manipulate. Each variable in VB.Net has a specific type, which determines the size and layout of the variable\'s memory; the range of values that can be stored within that memory; and the set of operations that can be applied to the variable.\n\n

        We have already discussed various data types. The basic value types provided in VB.Net can be categorized as −\n
    </string>
    <string name="variable2">
        VB.Net also allows defining other value types of variable like Enum and reference types of variables like Class. We will discuss date types and Classes in subsequent chapters.\n\n

        <b>Variable Declaration in VB.Net</b>\n\n
        The Dim statement is used for variable declaration and storage allocation for one or more variables. The Dim statement is used at module, class, structure, procedure or block level.\n\n

        Syntax for variable declaration in VB.Net is −\n\n
    </string>
    <string name="variable3">
        Where,\n\n

        <b>attributelist</b> is a list of attributes that apply to the variable. Optional.\n\n

        <b>accessmodifier</b> defines the access levels of the variables, it has values as - Public, Protected, Friend, Protected Friend and Private. Optional.\n\n

        <b>Shared </b> declares a shared variable, which is not associated with any specific instance of a class or structure, rather available to all the instances of the class or structure. Optional.\n\n

        <b>Shadows</b> indicate that the variable re-declares and hides an identically named element, or set of overloaded elements, in a base class. Optional.\n\n

        <b>Static</b> indicates that the variable will retain its value, even when the after termination of the procedure in which it is declared. Optional.\n\n

        <b>ReadOnly</b> means the variable can be read, but not written. Optional.\n\n

        <b>WithEvents</b> specifies that the variable is used to respond to events raised by the instance assigned to the variable. Optional.\n\n

        <b>Variablelist</b> provides the list of variables declared.\n\n

        Each variable in the variable list has the following syntax and parts −\n\n

        variablename[ ( [ boundslist ] ) ] [ As [ New ] datatype ] [ = initializer ] \n\n

        Where,\n\n

        <b>variablename</b> − is the name of the variable\n\n

         <b>boundslist</b> − optional. It provides list of bounds of each dimension of an array variable.\n\n

         <b>New</b> − optional. It creates a new instance of the class when the Dim statement runs.\n\n

         <b>datatype</b> − Required if Option Strict is On. It specifies the data type of the variable.\n\n

         <b>initializer</b> − Optional if New is not specified. Expression that is evaluated and assigned to the variable when it is created.\n\n

        Some valid variable declarations along with their definition are shown here −\n\n
            </string>
    <string name="variable4">
        <b>Variable Initialization in VB.Net</b>\n\n
        Variables are initialized (assigned a value) with an equal sign followed by a constant expression. The general form of initialization is −\n\n

        variable_name = value;\n\n

        for example,\n\n

        Dim pi As Double\n
        pi = 3.14159\n\n

        You can initialize a variable at the time of declaration as follows −\n\n

        Dim StudentID As Integer = 100\n
        Dim StudentName As String = "Bill Smith"\n\n

        Example\n\n
        Try the following example which makes use of various types of variables −\n\n
    </string>
    <string name="variable5">
        <b>Accepting Values from User</b>\n\n
        The Console class in the System namespace provides a function ReadLine for accepting input from the user and store it into a variable. For example,\n\n

        Dim message As String\n
        message = Console.ReadLine\n\n

        The following example demonstrates it −\n\n

    </string>
    <string name="constants">Constants</string>
    <string name="constants1">
        The constants refer to fixed values that the program may not alter during its execution. These fixed values are also called literals.\n\n

        Constants can be of any of the basic data types like an integer constant, a floating constant, a character constant, or a string literal. There are also enumeration constants as well.\n\n

        The constants are treated just like regular variables except that their values cannot be modified after their definition.\n\n

        An enumeration is a set of named integer constants.\n\n

        <b>Declaring Constants</b>\n\n
        In VB.Net, constants are declared using the Const statement. The Const statement is used at module, class, structure, procedure, or block level for use in place of literal values.\n\n

        The syntax for the Const statement is −\n\n
    </string>
    <string name="constants2">
        Where,\n\n

        attributelist − specifies the list of attributes applied to the constants; you can provide multiple attributes separated by commas. Optional.\n\n

        accessmodifier − specifies which code can access these constants. Optional. Values can be either of the: Public, Protected, Friend, Protected Friend, or Private.\n\n

        Shadows − this makes the constant hide a programming element of identical name in a base class. Optional.\n\n

        Constantlist − gives the list of names of constants declared. Required.\n\n

        Where, each constant name has the following syntax and parts −\n\n

       constantname [ As datatype ] = initializer\n\n

        constantname − specifies the name of the constant\n\n

        datatype − specifies the data type of the constant\n\n

        initializer − specifies the value assigned to the constant\n\n

        For example,\n\n
    </string>
    <string name="constants3">
        Example\n\n
        The following example demonstrates declaration and use of a constant value −\n\n
    </string>
    <string name="constants4">
        <b>Print and Display Constants in VB.Net</b>\n\n
        VB.Net provides the following print and display constants −\n\n
    </string>
    <string name="object_and_classes"><![CDATA[Classes & Objects]]></string>
    <string name="object1">
        When you define a class, you define a blueprint for a data type. This doesn\'t actually define any data, but it does define what the class name means, that is, what an object of the class will consist of and what operations can be performed on such an object.\n\n

        Objects are instances of a class. The methods and variables that constitute a class are called members of the class.\n\n

        <b>Class Definition</b>\n\n
        A class definition starts with the keyword Class followed by the class name; and the class body, ended by the End Class statement. Following is the general form of a class definition −\n\n

        [ attributelist ] [ accessmodifier ] [ Shadows ] [ MustInherit | NotInheritable ] [ Partial ] _\n
        Class name [ ( Of typelist ) ]\n
           [ Inherits classname ]\n
           [ Implements interfacenames ]\n
           [ statements ]\n
        End Class\n\n


        Where,

        > attributelist is a list of attributes that apply to the class. Optional.\n\n

        > accessmodifier defines the access levels of the class, it has values as - Public, Protected, Friend, Protected Friend and Private. Optional.\n\n

        > Shadows indicate that the variable re-declares and hides an identically named element, or set of overloaded elements, in a base class. Optional.\n\n

        > MustInherit specifies that the class can be used only as a base class and that you cannot create an object directly from it, i.e., an abstract class. Optional.\n\n

        > NotInheritable specifies that the class cannot be used as a base class.\n\n

        > Partial indicates a partial definition of the class.\n\n

        > Inherits specifies the base class it is inheriting from.\n\n

        > Implements specifies the interfaces the class is inheriting from.\n\n

        The following example demonstrates a Box class, with three data members, length, breadth and height −\n\n


    </string>
    <string name="object2">
        When the above code is compiled and executed, it produces the following result −\n\n

        Volume of Box1 : 210\n
        Volume of Box2 : 1560\n\n
    </string>
    <string name="object3">
        <b>Constructors and Destructors</b>\n\n
        A class constructor is a special member Sub of a class that is executed whenever we create new objects of that class. A constructor has the name New and it does not have any return type.\n\n

        Following program explains the concept of constructor −\n\n
    </string>
    <string name="object4">
        A default constructor does not have any parameter, but if you need, a constructor can have parameters. Such constructors are called parameterized constructors. This technique helps you to assign initial value to an object at the time of its creation as shown in the following example −\n\n
    </string>
</resources>