<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.VariableTypesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        android:layout_marginBottom="10dp"
        android:background="?attr/background_color"
        >


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_margin="5dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/variable_types"
                    android:textAlignment="gravity"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/anton"
                    android:textColor="@color/headerColor"
                    android:padding="10dp"
                    android:textAllCaps="true"

                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/headerColor"/>



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/variable1"
                    android:textAlignment="gravity"
                    android:textSize="20sp"
                    android:textColor="?attr/text_color"
                    android:lineSpacingExtra="10sp"
                    android:justificationMode="inter_word"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_11"
                    android:scaleType="fitXY"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cabin"
                    android:justificationMode="inter_word"
                    android:lineSpacingExtra="20sp"
                    android:text="@string/variable2"
                    android:textAlignment="gravity"
                    android:textColor="?attr/text_color"
                    android:textSize="17sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_12"
                    android:scaleType="fitXY"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/variable3"
                    android:textAlignment="gravity"
                    android:textSize="20sp"
                    android:textColor="?attr/text_color"
                    android:lineSpacingExtra="10sp"
                    android:justificationMode="inter_word"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_13"
                    android:scaleType="fitXY"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/variable4"
                    android:textAlignment="gravity"
                    android:textSize="20sp"
                    android:textColor="?attr/text_color"
                    android:justificationMode="inter_word"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_14"
                    android:scaleType="fitXY"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/variable5"
                    android:textAlignment="gravity"
                    android:textSize="20sp"
                    android:textColor="?attr/text_color"
                    android:justificationMode="inter_word"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_15"
                    android:scaleType="fitXY"
                    />




            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_margin="5dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/constants"
                    android:textAlignment="gravity"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/anton"
                    android:textColor="@color/headerColor"
                    android:padding="10dp"
                    android:textAllCaps="true"

                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/headerColor"/>



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/constants1"
                    android:textAlignment="gravity"
                    android:textSize="20sp"
                    android:textColor="?attr/text_color"
                    android:lineSpacingExtra="10sp"
                    android:justificationMode="inter_word"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_16"
                    android:scaleType="fitXY"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cabin"
                    android:justificationMode="inter_word"
                    android:lineSpacingExtra="20sp"
                    android:text="@string/constants2"
                    android:textAlignment="gravity"
                    android:textColor="?attr/text_color"
                    android:textSize="17sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_17"
                    android:scaleType="fitXY"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/constants3"
                    android:textAlignment="gravity"
                    android:textSize="20sp"
                    android:textColor="?attr/text_color"
                    android:lineSpacingExtra="10sp"
                    android:justificationMode="inter_word"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_18"
                    android:scaleType="fitXY"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/constants4"
                    android:textAlignment="gravity"
                    android:textSize="20sp"
                    android:textColor="?attr/text_color"
                    android:justificationMode="inter_word"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_19"
                    android:scaleType="fitXY"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_19"
                    android:scaleType="fitXY"
                    />



            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</ScrollView>