<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.ObjectClassesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        android:layout_marginBottom="10dp"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_margin="5dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/object_and_classes"
                    android:textAlignment="gravity"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/anton"
                    android:textColor="@color/headerColor"
                    android:padding="10dp"
                    android:textAllCaps="true"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/headerColor"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/object1"
                    android:textAlignment="gravity"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_55"
                    android:scaleType="fitXY"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/object2"
                    android:textAlignment="gravity"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/object3"
                    android:textAlignment="gravity"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_56"
                    android:scaleType="fitXY"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/object4"
                    android:textAlignment="gravity"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_57"
                    android:scaleType="fitXY"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>




    </LinearLayout>

</ScrollView>