<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.BasicDatatypeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        android:layout_marginBottom="10dp"
        android:background="?attr/background_color"
        >


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_margin="5dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/basic_datatypes"
                    android:textAlignment="gravity"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/anton"
                    android:textColor="@color/headerColor"
                    android:padding="10dp"
                    android:textAllCaps="true"

                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/headerColor"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/datatype1"
                    android:textAlignment="gravity"
                    android:textSize="20sp"
                    android:textColor="?attr/text_color"
                    android:lineSpacingExtra="10sp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_5"
                    android:scaleType="fitXY"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_6"
                    android:scaleType="fitXY"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/datatype2"
                    android:textAlignment="gravity"
                    android:textSize="20sp"
                    android:textColor="?attr/text_color"
                    android:lineSpacingExtra="10sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/datatype3"
                    android:textAlignment="gravity"
                    android:textSize="20sp"
                    android:textColor="?attr/text_color"
                    android:lineSpacingExtra="10sp"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_7"
                    android:scaleType="fitXY"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/datatype4"
                    android:textAlignment="gravity"
                    android:textSize="20sp"
                    android:textColor="?attr/text_color"
                    android:lineSpacingExtra="10sp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_8"
                    android:scaleType="fitXY"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_9"
                    android:scaleType="fitXY"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/datatype5"
                    android:textAlignment="gravity"
                    android:textSize="20sp"
                    android:textColor="?attr/text_color"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_10"
                    android:scaleType="fitXY"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

</ScrollView>